<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entryText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_entry"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/_0"
        android:gravity="center_vertical|end"
        android:background="@drawable/round_rect"
        android:textColor="#1C1C1C"
        android:padding="8dp"

        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="0dp"
        android:paddingEnd="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_backspace"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_backspace"
        android:tint="#808080"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/txt_entry"
        app:layout_constraintBottom_toBottomOf="@id/txt_entry"
        app:layout_constraintEnd_toEndOf="@id/entryText"
        android:contentDescription="@string/delete_char"
        />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="16dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        
        android:text="@string/c"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_7"
        app:layout_constraintEnd_toStartOf="@id/btn_divide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_entry" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="16dp"

        android:layout_marginEnd="8dp"
        
        android:text="@string/divide"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_clear"
        app:layout_constraintEnd_toStartOf="@id/btn_multiply"
        app:layout_constraintStart_toEndOf="@id/btn_clear"
        app:layout_constraintTop_toBottomOf="@+id/txt_entry" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"

        
        android:text="@string/x"
        android:textSize="24sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/btn_divide"
        app:layout_constraintEnd_toStartOf="@id/btn_subtract"
        app:layout_constraintStart_toEndOf="@id/btn_divide"
        app:layout_constraintTop_toBottomOf="@id/txt_entry" />

    <Button
        android:id="@+id/btn_subtract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="16dp"

        android:layout_marginEnd="16dp"
        
        android:text="@string/subtract"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_multiply"
        app:layout_constraintTop_toBottomOf="@id/txt_entry" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        
        android:text="@string/_7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_4"
        app:layout_constraintEnd_toStartOf="@id/btn_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_clear" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="8dp"

        
        android:text="@string/_8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_7"
        app:layout_constraintEnd_toStartOf="@id/btn_9"
        app:layout_constraintStart_toEndOf="@id/btn_7"
        app:layout_constraintTop_toTopOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="8dp"

        
        android:text="@string/_9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_8"
        app:layout_constraintEnd_toStartOf="@id/btn_plus"
        app:layout_constraintStart_toEndOf="@id/btn_8"
        app:layout_constraintTop_toTopOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="16dp"

        
        android:text="@string/plus"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_9"
        app:layout_constraintTop_toTopOf="@id/btn_9" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        
        android:text="@string/_4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_1"
        app:layout_constraintEnd_toStartOf="@id/btn_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_7" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="8dp"

        
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_4"
        app:layout_constraintEnd_toStartOf="@id/btn_6"
        app:layout_constraintStart_toEndOf="@id/btn_4"
        app:layout_constraintTop_toTopOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="16dp"

        
        android:text="@string/_6"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_5"
        app:layout_constraintEnd_toStartOf="@id/btn_plus"
        app:layout_constraintStart_toEndOf="@id/btn_5"
        app:layout_constraintTop_toTopOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        app:layout_constraintEnd_toStartOf="@id/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_4" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="8dp"

        
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_1"
        app:layout_constraintEnd_toStartOf="@id/btn_3"
        app:layout_constraintStart_toEndOf="@id/btn_1"
        app:layout_constraintTop_toTopOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="16dp"

        
        android:text="@string/_3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_2"
        app:layout_constraintEnd_toStartOf="@id/btn_equals"
        app:layout_constraintStart_toEndOf="@id/btn_2"
        app:layout_constraintTop_toTopOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="8dp"

        android:layout_marginBottom="16dp"
        
        android:text="@string/button0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_1" />

    <Button
        android:id="@+id/btn_decimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        
        android:text="@string/decimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_equals"
        app:layout_constraintStart_toEndOf="@id/btn_0"
        app:layout_constraintTop_toTopOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginEnd="16dp"
        
        android:text="@string/equals"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_decimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_plus"
        app:layout_constraintTop_toTopOf="@id/btn_3" />

</androidx.constraintlayout.widget.ConstraintLayout>